syntax = "proto3";

option csharp_namespace = "T_PostService";

package post;

// The post service definition.
service PostGrpc {
  
  // Sends a get post by id request
  rpc GetPostById (GetPostByIdRequest) returns (PostReply);
  rpc GetPosts(GetPostsRequest) returns (GetPostsReply);
}


message GetPostByIdRequest {
  int32 id = 1;
}


message PostReply {
  int32 id = 1;
}

message GetPostsRequest{
  
}

message GetPostsReply{
  repeated GetPostsReplyItem posts = 1;
}

message GetPostsReplyItem{
  int32 Id = 1;
  string Content = 2;
  int32 NumberOfDonation = 3;
  string CreatedById = 4;
  repeated string ImageUrls = 5;
  repeated string VideoUrls = 6;
  int32 NumberOfComment = 7;
}
